--- a/index.html
+++ b/index.html
@@ -20,23 +20,9 @@
     
   <header class="bg-blue-900">
    <div class="container mx-auto flex justify-between items-center py-4 px-6">
-    <img alt="UNICAH logo" class="h-10" height="50" src="https://storage.googleapis.com/a1aa/image/UhkiXx4b4lnnM2_yBtb96ZUn2aXo3vC33gY4zb2mkD8.jpg" width="50"/>
+    <img alt="UNICAH logo" class="h-10" height="50" src="https://yt3.googleusercontent.com/of7UX9meJXSztXFK3lMBkN97PQiqaMyVvwWiBXiQ3Lz1fgZlAHG-xKtdhtIRZR59Iqxt9ijKEg=s900-c-k-c0x00ffffff-no-rj" width="50"/>
     <nav class="space-x-4">
-     <!-- <a class="hover:underline" href="#">
-      Admisiones
-      <i class="fas fa-caret-down">
-      </i>
-     </a>
-     <a class="hover:underline" href="#">
-      UNICAH
-      <i class="fas fa-caret-down">
-      </i>
-     </a> -->
-     <!-- <a class="hover:underline" href="#">
-      Vida estudiantil
-      <i class="fas fa-caret-down">
-      </i>
-     </a> -->
+
      <a class="hover:underline" href="#Expositores">
       Expositores
      </a>
@@ -47,9 +33,7 @@
         Direccion
     </a>
     </nav>
-    <!-- <a class="bg-yellow-500 text-blue-900 px-4 py-2 rounded-full" href="#">
-     UNICAH ID
-    </a> -->
+
    </div>
   </header>
 
@@ -57,7 +41,7 @@
   <main class="relative">
     <img alt="Imagen Congreso" class="w-full h-[50vh] sm:h-[60vh] md:h-[70vh] lg:h-[80vh] object-cover" src="/img/congreso.jpg" />
 
-    <!-- <img alt="Person in a suit holding a microphone in a corridor" class="w-full h-[70vh] object-cover" src="/img/congreso.jpg" /> -->
+    <!-- <img alt="Imagen Congreso" class="w-full h-[70vh] object-cover" src="/img/congreso.jpg" /> -->
 
    <div class="absolute inset-0 bg-blue-900 bg-opacity-50 flex flex-col justify-center items-center text-center px-4">
     <h1 class="text-4xl md:text-6xl font-bold mb-4 max-w-[90%] md:max-w-[60%]">
@@ -71,6 +55,7 @@
   </main>
 
 
+  <!-- Expositores -->
   <section id="Expositores" class="bg-white text-blue-900 py-12">
    <div class="container mx-auto px-6">
     <h2 class="text-3xl font-bold mb-8 text-center">
@@ -149,6 +134,7 @@
 
 
 
+  <!-- Formulario -->
   <section id="Inscripcion" class="bg-blue-900 text-white py-12">
     <div class="container mx-auto px-6">
       <h2 class="text-3xl font-bold text-center mb-6">Inscripción</h2>
@@ -177,6 +163,7 @@
 
 
 
+  <!-- Sweet Altert -->
   <script>
     document.addEventListener("DOMContentLoaded", function() {
         const urlParams = new URLSearchParams(window.location.search);
